Update Demo Projects (WIP)

--- a/Demo/NonStoryboard/LGSideMenuControllerDemo/Info.plist
+++ b/Demo/NonStoryboard/LGSideMenuControllerDemo/Info.plist
@@ -24,10 +24,14 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>IsStoryboardBased</key>
+	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>UIMainStoryboardFile</key>
+	<string>Choose</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
