--- a/Demo/Storyboard/LGSideMenuControllerDemo/Info.plist
+++ b/Demo/Storyboard/LGSideMenuControllerDemo/Info.plist
@@ -24,6 +24,8 @@
 	<string>????</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>IsStoryboardBased</key>
+	<true/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
